--- a/static/i18n/zh.json
+++ b/static/i18n/zh.json
@@ -33,7 +33,7 @@
   "repo": "开源",
   "text-level-1": "你们这群害人精！",
   "text-level-2": "放一个不想见你！",
-  "text-level-3": "兄弟们，啊不是，姐妹们，冲啊！",
+  "text-level-3": "兄弟们啊不是，姐妹们冲啊！",
   "text-level-4": "姐姐我好喜欢你哦~",
   "text-level-5": "叫老公！",
   "time-over": "倒计时多了",
